--- a/poller/Views/Web.config
+++ b/poller/Views/Web.config
@@ -17,7 +17,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
-        <add namespace="poller" />
+        <add namespace="RejuvenatingExample" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
