--- a/poller/Web.config
+++ b/poller/Web.config
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Server=.\SQLEXPRESS64;Database=poller;Integrated Security=True;" />
-    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-poller-20170224102805.mdf;Initial Catalog=aspnet-poller-20170224102805;Integrated Security=True"
+    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Server=.\SQLEXPRESS64;Database=RejuvenatingExample;Integrated Security=True;" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-RejuvenatingExample-20170224102805.mdf;Initial Catalog=aspnet-RejuvenatingExample-20170224102805;Integrated Security=True"
       providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
