--- a/RejuvenateExample/packages.config
+++ b/RejuvenateExample/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AngularJS.Core" version="1.6.2" targetFramework="net452" />
   <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
@@ -15,6 +16,9 @@
   <package id="Microsoft.AspNet.SignalR.JS" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net452" />
