--- a/Rejuvenate/Rejuvenate.csproj
+++ b/Rejuvenate/Rejuvenate.csproj
@@ -77,26 +77,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Db\EntitiesChangedHandler.cs" />
-    <Compile Include="Db\Helpers\DbContextExtensions.cs" />
-    <Compile Include="Db\IChangePublishingQueryable.cs" />
     <Compile Include="Db\Interfaces.cs" />
-    <Compile Include="Db\IChangePublisher.cs" />
-    <Compile Include="Db\ChangePublisher.cs" />
-    <Compile Include="Db\ChangePublishingDbContext.cs" />
-    <Compile Include="Db\SignalR\ChangePublishingHub.cs" />
-    <Compile Include="Db\IChangeProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Db\SignalR\ChangePublishingClient.cs" />
-    <Compile Include="v2\ChangePublishingSignalRHub.cs" />
-    <Compile Include="v2\ChangePublishingDbContextBase.cs" />
+    <Compile Include="v2\EntitiesChangedListener.cs" />
+    <Compile Include="v2\ChangePublishingDbSet.cs" />
+    <Compile Include="v2\ChangePublishingQueryable.cs" />
+    <Compile Include="v2\Internal\EntitiesChangedListeners.cs" />
+    <Compile Include="v2\Internal\DbContextWithSaveEvent.cs" />
+    <Compile Include="v2\Internal\SignalRHubListeners.cs" />
+    <Compile Include="v2\SignalRChangePublishing\ChangePublishingSignalRHub.cs" />
+    <Compile Include="v2\Internal\DbContextWitHub.cs" />
     <Compile Include="v2\ChangePublishingDbContext.cs" />
+    <Compile Include="v2\EntityChangePublishing\DbContextChangesHub.cs" />
+    <Compile Include="v2\EntityChangePublishing\EntityChangesHub.cs" />
+    <Compile Include="v2\EntitiesChangedChannelHandler.cs" />
+    <Compile Include="v2\EntityChangePublishing\EntitiesChangedHandler.cs" />
+    <Compile Include="v2\EntityChangePublishing\EntityChangedMessage.cs" />
+    <Compile Include="v2\EntityChangePublishing\IEntityChangesHub.cs" />
+    <Compile Include="v2\LinkedEntityChangedHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
-    <Compile Include="Db\ChangePublishingDbContext.ChangePublishingQueryable.cs" />
-    <Compile Include="Db\ChangePublishingDbContext.ChangeProcessor.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\ChangePublisher.js">
